# RoutingBrain

./: .gitignore  Agent-suggestions.md  Makefile  docker-compose.yml  plan.md  project-summary.md  roadmap.md  savings.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/internal/: audit.py  auth.py  health.py  routing.py
backend/app/api/v1/: chat.py  models.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/middleware/: auth.py  request_id.py
backend/app/models/: cost.py  policy.py  request.py  response.py  routing.py
backend/app/observability/: audit_log.py
backend/app/providers/: anthropic.py  base.py  gemini.py  ollama.py  openai.py  registry.py
backend/app/routing/: analyzer.py  engine.py  policy.py  risk_analyzer.py  routing_brain.py  virtual_models.py
backend/app/storage/: api_key_store.py  budget_tracker.py  db.py
backend/app/storage/migrations/: 001_mvp_schema.sql  002_seed_demo_tenants.sql
backend/config/: meta_llm_system_prompt.txt  models.yaml
backend/config/routing_policies/: acme-rd.yaml  base.yaml  beta-rd.yaml  rd.yaml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/audit/: page.tsx
frontend/app/inspector/: page.tsx
frontend/app/lab/: page.tsx
frontend/components/: nav.tsx  routing-panel.tsx
frontend/lib/: api.ts
